--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/apkrtm/y513p" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/apkrtm/x11o" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/apkrtm/e12z" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/apkrtm/h8k" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/apkrtm/i4z" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/apkrtm/i12a" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/apkrtm/x3f" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/apkrtm/t10g" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/apkrtm/m9o" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/apkrtm/x7k" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/apkrtm/f5n" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/orpca/u513a" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/orpca/p11e" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/orpca/o12d" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/orpca/l8e" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/orpca/t4i" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/orpca/e12e" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/orpca/r3n" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/orpca/e10z" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/orpca/c9h" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/orpca/j7o" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/orpca/l5z" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242776.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/AAA-2-320x200.jpg"><p align="center">【最新疫情7.9】香港出现第三波感染</p></a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242776.md#1" title="【最新疫情7.9】香港出现第三波感染""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/AAA-2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12242765.md#1" title="被捕香港大纪元员工：遭警威胁送中活摘""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/DSC_6510-1-320x200.jpg">&nbsp;</a>
@@ -13,11 +13,11 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241760.md#1" title="中芯国际股价暴涨暴跌 中共撒钱难掩窘境""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/06/GettyImages-55920462-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241863.md#1" title="【一线采访】贵州铜仁山体滑坡 村庄被埋""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/IMG_1400-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://oqudue369.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243709.md#1">上海连锁酒店被断水电 黑保安封门阻营业</a><br>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1">大学教授曝丑闻 北京律协副会长疑有多情妇</a><br>
-:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243734.md#1">韩国首尔市长失联 手机关机 疑似留下遗言</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243611.md#1">709大抓捕5周年 蓬佩奥：这波打压仍在持续</a><br>
-:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243659.md#1">习当局再清洗政法系统 分析：大动作在后面</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243709.md#1">上海连锁酒店被断水电 黑保安封门阻营业</a><br>
+:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243412.md#1">大学教授曝丑闻 北京律协副会长疑有多情妇</a><br>
+:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243734.md#1">韩国首尔市长失联 手机关机 疑似留下遗言</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243611.md#1">709大抓捕5周年 蓬佩奥：这波打压仍在持续</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243659.md#1">习当局再清洗政法系统 分析：大动作在后面</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/9/n12243597.md#1">王全璋律师展开维权行动 向法院递交控告状</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239553.md#1">贵州大巴21死 传司机是退伍军人、拆迁户</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 359,549,892 人
+!共 359,549,680 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -113,10 +113,10 @@
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/6/30/n12222018.md#1">病毒传播复杂多样 北京急查疫情溯源</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/6/29/n12219261.md#1">【内幕】关联北京疫情 河北大规模检测背后</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/6/27/n12216091.md#1">【内幕】六常委分歧 习决意暂不与美签约</a><br>
-<br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/5/n12233581.md#1">天人感应现象 奇石空山叫 神石藏字</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/5/27/n12140713.md#1">【中国礼仪文化】见面礼仪之叉手礼</a><br>
+<br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/20/5/27/n12140713.md#1">【中国礼仪文化】见面礼仪之叉手礼</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12235533.md#1">“里”怎样开创华夏文化？古人如何步测里程？</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/5/27/n12141489.md#1">【康熙大帝】远赴朔漠 三征葛尔丹</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236041.md#1">“真善忍好”冲散疫情中的恐惧和烦恼</a><br>
 <a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12230158.md#1">绘画中的瘟疫——罪与罚的故事（一）</a><br>
-<a href="https://github.com/oqudue369/djy/blob/master/gb/20/5/27/n12141489.md#1">【康熙大帝】远赴朔漠 三征葛尔丹</a><br>
+<a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/5/n12234362.md#1">《诗经》里的伯劳鸟</a><br>
 <br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/oqudue369/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/oqudue369/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/oqudue369/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
